# UAT-Tool

./: .coverage  .gitignore  Comandos utiles.txt  analisis_complejidad.txt  analisis_mantenibilidad.txt  analisis_metodos_largos.txt  analisis_prospector.txt  assets.py  bugs.py  cases.py  convert_ui.bat  db.py  db_modification.py  debug_test.py  estructura.txt  hello_world.py  home_page.py  main.py  mejoras.txt  pyproject.toml  reporte_pydocstyle.txt  requirements.py  requirements.txt  run_tests_html.py  uat-tool.pyproject  uat_tool.db  vulture_report.txt  window_manager.py
application/: __init__.py  app_context.py  unit_of_work.py
base/: base_asset_form.py  base_form.py
config/: app_config.py  assets_config.py  block_table_config.py  case_table_config.py  form_config.py  forms_config.py  model_domains.py  page_config.py  step_form_config.py  table_config.py
controllers/: assets_controller.py  block_controller.py  bug_controller.py  bugs_controller.py  campaing_form_controller.py  case_controller.py  main_controller.py  requirements_controller.py  step_controller.py
core/models/: __init__.py  assets.py  associations.py  auxiliary.py  bugs.py  executions.py  requirements.py  test_management.py
data/database/: __init__.py  base.py  engine.py  init_db.py  initial_data.py
data/repositories/: __init__.py  asset_repository.py  auxiliary_repository.py  base.py  bug_repository.py  executions_repository.py  requirement_repository.py  test_management_repository.py
db/: auxiliary.py  db.py  initial_data.py  models.py
docs/: ARCHITECTURE_hor.md  ARCHITECTURE_vert.md  Cositas a mejorar.docx  UAT-Tool Data Structure.drawio.html  UAT-Tool Data Structure.drawio.xml  architecture info.docx  best_practices.docx  conf.py  data_flow.docx  documentation.docx  flow.dot  flujos.docx  ~$flujos.docx  ~$sitas a mejorar.docx  ~$st_practices.docx  ~$ta_flow.docx
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
graphviz/include/graphviz/: graphviz_version.h
graphviz/lib/pkgconfig/: libcdt.pc  libcgraph.pc  libgvc.pc  libgvpr.pc  libpathplan.pc  libxdot.pc
managers/: form_manager.py  page_manager.py  steps_table_manager.py  table_manager.py
pages/: bugs.py  campaigns.py  dialogs.py  home.py  main_window.py  requirements.py
presentation/views/ui/: add_step.ui  execution_campaign.ui  form_block_ui.py  form_case.ui  form_case_ui.py  form_email.ui  form_uhub_org.ui  ui_info_campaign.py
reports/: prospector_report.json
schemas/: assets.sql  bugs.sql  campaigns.sql  requirements.sql  test_management.sql
services/: assets_service.py  block_service.py  bug_service.py  campaign_form_service.py  case_service.py  form_service.py  requirement_service.py  step_service.py  table_service.py
src/uat_tool/: __init__.py  __main__.py  main.py
src/uat_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/uat_tool/application/: __init__.py  app_context.py  (+3 more)
tests/: conftest.py
tests/reports/: test_20250923_170133.html  test_20250923_170726.html
tests/unit/: conftest.py
ui/: add_bug.ui  add_bug_ui.py  add_drone.ui  add_operator.ui  add_organization.ui  add_step.ui  add_uhubuser.ui  add_uspace.ui  add_zone.ui  assets_page.ui  assets_page_ui.py  block_form.ui  block_info.ui  blocks_page.ui  bug_info.ui  bug_info_ui.py  campaign_info.ui  campaigns_view.ui  case_form.ui  case_info.ui  case_step_form.ui  cases_page.ui  close_bug_dialog.ui  close_bug_dialog_ui.py  delete_asset_dialog.ui  delete_bug_dialog.ui  delete_bug_dialog_ui.py  delete_requirement_dialog.ui  delete_requirement_dialog_ui.py  dialog_action.ui  edit_asset_dialog.ui  edit_bug.ui  edit_bug_dialog.ui  edit_bug_dialog_ui.py  edit_bug_ui.py  edit_requirement_dialog.ui  edit_requirement_dialog_ui.py  form_block.ui  form_block_ui.py  form_bug.ui  (+46 more)
utils/: .prospector.yaml  db_modification.py  dict_utils.py  form_mode.py  run_coverage.py  run_tests_html.py  tree.py  uspace.json  uspace_2.json  validation.py
views/: assets.py  blocks.py  bugs.py  campaigns.py  cases.py  dialogs.py  main_window.py  requirements.py  steps.py
(+121 files in other folders)
